home-cluster/longhorn-system/middleware-longhorn-ui.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-ui-basic-auth
  namespace: longhorn-system
spec:
  basicAuth:
    secret: longhorn-ui-basic-auth
