home-cluster/longhorn-system/namespace.yaml
# Longhorn (Cloud Native Storage) system namespace
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
